--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-three/fiber": "^8.18.0",
     "framer-motion": "^11.0.0",
     "gsap": "^3.14.2",
     "lucide-react": "^0.300.0",
