--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -1,52 +1,20 @@
 [
   {
-    "id": "hyper-radio",
-    "slug": "hyper-radio",
-    "title": "Hyper Radio",
-    "image": "https://images.unsplash.com/photo-1614613535308-eb5fbd3d2c17?q=80&w=2940&auto=format&fit=crop",
-    "headerImage": "https://images.unsplash.com/photo-1614613535308-eb5fbd3d2c17?q=80&w=2940&auto=format&fit=crop",
-    "tags": [
-      "Web Application",
-      "React",
-      "Audio"
-    ],
-    "category": "Web Application",
-    "selected": true,
-    "metadata": {
-      "format": "Web Application",
-      "year": "2023",
-      "client": "Personal Project",
-      "collaborators": "None"
-    },
-    "description": "Hyper Radio is an experimental web-based radio station that procedurally generates audio landscapes. Leveraging the Web Audio API, it creates infinite, evolving soundscapes that react to user interaction. \n\nThe project explores the intersection of code and music composition, allowing users to influence the generative parameters in real-time.",
-    "video": "",
-    "images": [
-      "https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=2940&auto=format&fit=crop",
-      "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2940&auto=format&fit=crop"
-    ],
-    "links": {
-      "repo": "https://github.com/joshua-ng/hyper-radio",
-      "live": "https://hyper-radio.demo"
-    }
-  },
-  {
     "id": "sonic-assembly",
     "slug": "sonic-assembly",
     "title": "Sonic Assembly",
-    "image": "https://images.unsplash.com/photo-1558486012-817147316be7?q=80&w=2678&auto=format&fit=crop",
-    "headerImage": "https://images.unsplash.com/photo-1558486012-817147316be7?q=80&w=2678&auto=format&fit=crop",
+    "image": "/assets/sonic_assembly_banner.png",
+    "headerImage": "/assets/sonic_assembly_banner.png",
     "tags": [
-      "Audio Tech",
-      "C++",
-      "DSP"
+      "Frontend",
+      "React"
     ],
-    "category": "Audio Tech",
+    "category": "Web",
     "selected": true,
     "metadata": {
-      "format": "Desktop Software",
-      "year": "2022",
-      "client": "Open Source",
-      "collaborators": "Audio Lab Group"
+      "format": "Website",
+      "year": "2025",
+      "collaborators": "Sonic Assembly"
     },
     "description": "Sonic Assembly is a modular audio processing toolkit built in C++. It features a node-based interface for constructing complex signal chains and real-time DSP effects.\n\nDesigned for sound designers and experimental musicians, it provides low-level access to audio buffer manipulation while maintaining a user-friendly visual graph.",
     "video": "",
@@ -54,38 +22,39 @@
       "https://images.unsplash.com/photo-1598488035139-bdbb2231ce04?q=80&w=2940&auto=format&fit=crop"
     ],
     "links": {
-      "repo": "https://github.com/joshua-ng/sonic-assembly",
-      "live": ""
+      "repo": "https://github.com/joshuauaua/sonic-assembly",
+      "live": "https://www.sonicassembly.se/"
     }
   },
   {
     "id": "velosonics",
     "slug": "velosonics",
     "title": "Velosonics",
-    "image": "https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=2940&auto=format&fit=crop",
-    "headerImage": "https://images.unsplash.com/photo-1518770660439-4636190af475?q=80&w=2940&auto=format&fit=crop",
+    "image": "/assets/velosonics_banner.png",
+    "headerImage": "/assets/velosonics_banner.png",
     "tags": [
-      "Installation",
-      "Arduino",
-      "Sensors"
+      "ML",
+      "Audio Classification",
+      "Sensors",
+      "Embedded Programming"
     ],
-    "category": "Installation",
+    "category": "Machine Learning",
     "selected": true,
     "metadata": {
-      "format": "Physical Installation",
-      "year": "2021",
-      "client": "City Art Council",
-      "collaborators": "Jane Doe (Architect)"
+      "format": "Pilot: Audio Classification with ML",
+      "year": "2025",
+      "client": "CreativeFLIP, Goethe Institute",
+      "collaborators": "MoveByBike Italy"
     },
-    "description": "Velosonics is an interactive light and sound installation powered by bicycle movement. Using Arduino and custom sensors, the speed and rhythm of cyclists are translated into visual patterns on a 50ft LED wall.\n\nThe installation aims to visualize the flow of urban movement and encourage sustainable transport through play.",
-    "video": "",
+    "description": "Velosonics was a pilot project to apply Machine Learning to audio analysis of delivery bicycles in order to identify current and prospective maintenance issues.  The project was a collaboration between Sonic Assembly and MoveByBike Italy and was selected as 1 of 10 crossdisciplinary projects in Europe by CreativeFLIP, supported by the Goethe Institute and European Commission.",
+    "video": "https://youtu.be/dNpMcT1UZmg?si=mFbZk1fD7L1_3snr",
     "images": [
-      "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2940&auto=format&fit=crop",
-      "https://images.unsplash.com/photo-1492684223066-81342ee5ff30?q=80&w=2940&auto=format&fit=crop"
+      "/assets/velosonics_img_1",
+      "/assets/velosonics_img_2"
     ],
     "links": {
       "repo": "",
-      "live": ""
+      "live": "https://teachable-machine-react-audio.vercel.app/"
     }
   },
   {
@@ -140,6 +109,36 @@
     "links": {
       "repo": "",
       "live": "https://datascape.demo"
+    }
+  },
+  {
+    "id": "hyper-radio",
+    "slug": "hyper-radio",
+    "title": "Hyper Radio",
+    "image": "https://images.unsplash.com/photo-1614613535308-eb5fbd3d2c17?q=80&w=2940&auto=format&fit=crop",
+    "headerImage": "https://images.unsplash.com/photo-1614613535308-eb5fbd3d2c17?q=80&w=2940&auto=format&fit=crop",
+    "tags": [
+      "Web Application",
+      "React",
+      "Audio"
+    ],
+    "category": "Web Application",
+    "selected": true,
+    "metadata": {
+      "format": "Web Application",
+      "year": "2023",
+      "client": "Personal Project",
+      "collaborators": "None"
+    },
+    "description": "Hyper Radio is an experimental web-based radio station that procedurally generates audio landscapes. Leveraging the Web Audio API, it creates infinite, evolving soundscapes that react to user interaction. \n\nThe project explores the intersection of code and music composition, allowing users to influence the generative parameters in real-time.",
+    "video": "",
+    "images": [
+      "https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=2940&auto=format&fit=crop",
+      "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2940&auto=format&fit=crop"
+    ],
+    "links": {
+      "repo": "https://github.com/joshua-ng/hyper-radio",
+      "live": "https://hyper-radio.demo"
     }
   }
 ]
