--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "motion": "^12.24.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-helmet-async": "^2.0.5",
     "react-router-dom": "^6.21.0",
     "three": "^0.182.0"
   },
