--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "homepage": "https://joshuauaua.github.io/",
   "scripts": {
     "dev": "vite",
-    "build": "vite build",
+    "build": "vite build && cp dist/index.html dist/404.html",
     "lint": "eslint . --ext js,jsx --report-unused-disable-directives --max-warnings 0",
     "preview": "vite preview"
   },
