--- a/src/data/projects.json
+++ b/src/data/projects.json
@@ -106,13 +106,10 @@
     },
     "description": "Hyper Radio is a concept that reinvents local radio for the streaming age.  The project, developed with Axel Schubert, was shortlisted out of over 100 applicants for the Music Tech Europe Accelerator program 2026.  Conceptually, the project aims to challenge the streaming service status quo by creating a platform where local artists reach local listeners, as opposed to competing in huge global algorithms. The result was a webapp working prototype for a streaming service that allows listeners to upload tracks, create shows and stations, seamlessly handling HLS protocol, FFMPEG conversion and Azure Blob Storage in the backend built entirely in C#. ",
     "video": "https://youtu.be/5ujTok-0lfg?feature=youtu.be",
-    "images": [
-      "https://images.unsplash.com/photo-1550745165-9bc0b252726f?q=80&w=2940&auto=format&fit=crop",
-      "https://images.unsplash.com/photo-1550751827-4bd374c3f58b?q=80&w=2940&auto=format&fit=crop"
-    ],
+    "images": [],
     "links": {
       "repo": "https://github.com/joshua-ng/hyper-radio",
-      "live": "https://hyper-radio.demo"
+      "live": "https://hyperradio.online/"
     }
   }
 ]
